--- a/style.css
+++ b/style.css
@@ -1,7 +1,28 @@
 body {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.d-none {
+    display: none;
+}
+
+#overlays {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    width: 100dvw;
+    height: 100dvh;
+}
+
+#start-screen,
+#end-screen {
+    margin-top: 80px;
+    width: 1280px;
+    height: 720px;
 }
 
 canvas {
