--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.d-none {
+    display: none;
+}
+
 body {
     margin: 0;
     display: flex;
@@ -5,8 +15,27 @@ body {
     align-items: center;
 }
 
-.d-none {
-    display: none;
+button {
+    border: unset;
+    background-color: transparent;
+    font-family: Chewy;
+    color: #4aaeff;
+    font-size: 38px;
+    cursor: pointer;
+}
+
+button:hover {
+    transform: scale(1.1);
+    filter: drop-shadow(0px 0px 5px lightblue);
+    text-shadow: 1px 1px 0px rgba(0 0 0 / 0.7);
+}
+
+h1 {
+    margin: 20px 0;
+    font-family: Chewy;
+    font-size: 80px;
+    color: #4aceff;
+    text-shadow: 2px 2px 8px rgba(0 0 0 / 0.8);
 }
 
 #overlays {
@@ -19,30 +48,51 @@ body {
 }
 
 .overlay-screen{
-    margin-top: 80px;
+    margin-top: 145px;
     width: 1280px;
     height: 720px;
 }
 
 #start-screen {
     background-image: url(./img/menu-screens/backgrounds/start-background.png);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
+
+/* #container-audio-controls {
+    display: flex;
+    gap: 10px;
+    margin: 100px 0 0 100px; 
+} */
 
 #container-buttons {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
+    margin: 150px 0 0 100px;
 }
+
+/* .menu-button-sm {
+    width: 50px;
+    height: 50px;
+} */
+
+/* #button-music-off {
+    background: url(./img/menu-screens/buttons/music-off.png);
+    background-size: contain;
+} */
+
+/* #button-sound-off {
+    background: url(./img/menu-screens/buttons/sound-off.png);
+    background-size: contain;
+} */
 
 .menu-button {
     width: 230px;
     height: 85px;
-    border: unset;
-    background-color: transparent;
     background: url(./img/menu-screens/buttons/menu-button.png);
     background-size: contain;
-    color: white;
-    font-size: 32px;
 }
 
 canvas {
