--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 
 button {
     border: unset;
-    background-color: transparent;
     font-family: Chewy;
     color: #4aaeff;
     font-size: 38px;
@@ -60,23 +59,33 @@ h1 {
     gap: 15px;
 }
 
-/* #container-audio-controls {
-    display: flex;
-    gap: 10px;
-    margin: 100px 0 0 100px; 
-} */
-
 #container-buttons {
     display: flex;
     flex-direction: column;
+    width: 230px;
     gap: 15px;
     margin: 150px 0 0 100px;
 }
 
-/* .menu-button-sm {
-    width: 50px;
-    height: 50px;
-} */
+.menu-button {
+    width: 230px;
+    height: 85px;
+    background: url(./img/menu-screens/buttons/menu-button.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.menu-button-sm {
+    width: 60px;
+    height: 60px;
+}
+
+#button-controls {
+    align-self: flex-end;
+    background: url(./img/menu-screens/buttons/keyboard.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
 /* #button-music-off {
     background: url(./img/menu-screens/buttons/music-off.png);
@@ -87,13 +96,6 @@ h1 {
     background: url(./img/menu-screens/buttons/sound-off.png);
     background-size: contain;
 } */
-
-.menu-button {
-    width: 230px;
-    height: 85px;
-    background: url(./img/menu-screens/buttons/menu-button.png);
-    background-size: contain;
-}
 
 canvas {
     margin: 0;
