--- a/style.css
+++ b/style.css
@@ -116,6 +116,67 @@ p {
     background-repeat: no-repeat;
 }
 
+#controls {
+    gap: 0px;
+}
+
+.container-keybindings {
+    width: 800px;
+    height: 325px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly
+}
+
+.keybindings-row {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    gap: 50px;
+}
+
+.row-left,
+.row-right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.binding {
+    font-family: Chewy;
+    font-size: 45px;
+    color: #4aceff;
+    text-shadow: 2px 2px 5px rgba(0 0 0 / 0.8);
+}
+
+.key {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Chewy;
+    font-size: 30px;
+    color: #1ba8db;
+    text-shadow: 2px 2px 2px rgba(0 0 0 / 0.8);
+}
+
+.key-sm {
+    width: 60px;
+    height: 60px;
+    background: url(./img/menu-screens/buttons/empty.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.key-bg {
+    width: 161px;
+    height: 60px;
+    background: url(./img/menu-screens/buttons/menu-button.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 .container-volume-controls {
     display: flex;
     flex-direction: column;
