--- a/style.css
+++ b/style.css
@@ -194,6 +194,14 @@ p {
     height: 50px;
 }
 
+.menu-button-xsm:disabled {
+    transform: scale(1);
+    filter: drop-shadow(0 0 0);
+    filter: grayscale(1);
+    text-shadow: 0 0 0 rgba(0 0 0 / 0);
+    cursor: default;
+}
+
 .btn-down {
     background: url(./img/menu-screens/buttons/arrow-left.png);
     background-size: contain;
