--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ p {
 }
 
 #mobile-controls-walking {
+    margin: 0 0 20px 20px;
     width: 200px;
     height: 100px;
     border: 1px solid green;
@@ -105,6 +106,7 @@ p {
 }
 
 #mobile-controls-actions {
+    margin: 0 20px 20px 0;
     width: 200px;
     height: 100px;
     border: 1px solid red;
@@ -125,6 +127,7 @@ p {
 }
 
 #mobile-controls-settings {
+    margin-left: 20px;
     width: 100px;
     height: 200px;
     flex-direction: column;
@@ -185,7 +188,6 @@ p {
 }
 
 .menu-button {
-    width: 230px;
     height: 85px;
     background: url(./img/menu-screens/buttons/menu-button.png);
     background-size: contain;
@@ -451,5 +453,53 @@ p {
 
 canvas {
     margin: 0;
+    display: block;
     background-color: black;
+}
+
+@media only screen and (max-width: 1280px) {
+    h1 {
+        display: none;
+    }
+
+    #mobile-controls {
+        width: 100%;
+    }
+
+    #mobile-controls-left {
+        gap: 200px;
+    }
+
+    .overlay-screen {
+        width: 100%;
+        height: 77%;
+    }
+
+    #start-screen {
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .container-buttons {
+        width: 18%;
+        margin: 11.75% 0 0 7.85%;
+    }
+
+    .menu-button {
+        height: 14.92%;
+    }
+
+    canvas {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 720px) {
+    .overlay-screen {
+        height: 100vh;
+    }
+
+    canvas {
+        height: 100vh;
+    }
 }
