--- a/style.css
+++ b/style.css
@@ -247,7 +247,8 @@ p {
 
 .binding {
     font-family: Chewy;
-    font-size: 4.5em;
+    /* font-size: 4.5em; */
+    font-size: clamp(16px, calc(45 / 1280 * 100vw), 45px);
     color: #4aceff;
     text-shadow: 2px 2px 5px rgba(0 0 0 / 0.8);
 }
@@ -257,7 +258,8 @@ p {
     align-items: center;
     justify-content: center;
     font-family: Chewy;
-    font-size: 3em;
+    /* font-size: 3em; */
+    font-size: clamp(16px, calc(30 / 1280 * 100vw), 30px);
     color: #1ba8db;
     text-shadow: 2px 2px 2px rgba(0 0 0 / 0.8);
 }
@@ -569,10 +571,48 @@ canvas {
         aspect-ratio: 230 / 85;
     }
 
+    #header-img-controls {
+        margin-top: 2.4%;
+        width: 50.2%;
+        height: auto;
+        aspect-ratio: 643 / 130;
+    }
+
+    .container-keybindings {
+        width: 62.5%;
+    }
+
+    .keybindings-row {
+        height: 24.6%;
+    }
+
+    .row-left,
+    .row-right {
+        gap: 10px;
+    }
+
+    .key-sm {
+        width: 16%;
+        height: auto;
+        aspect-ratio: 1 / 1;
+    }
+
+    .key-bg {
+        width: 42.7%;
+        height: auto;
+        aspect-ratio: 161 / 60;
+    }
+
     canvas {
         width: 100%;
         height: auto;
         aspect-ratio: 1280 / 720;
+    }
+}
+
+@media only screen and (max-width: 825px) {
+    .keybindings-row {
+        gap: 35px;
     }
 }
 
@@ -598,11 +638,21 @@ canvas {
     .button-mute {
         margin-left: 15px;
     }
+
+    .keybindings-row {
+        gap: 25px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
     .container-volume-controls {
         gap: 5px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .keybindings-row {
+        gap: 15px;
     }
 }
 
