--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 
 body {
     margin: 0;
-    min-width: 100dvw;
-    min-height: 100dvh;
+    min-width: 10dvw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -472,10 +472,11 @@ canvas {
     background-color: black;
 }
 
-@media only screen and (max-width: 1280px) and (max-height: 720px) {
+@media only screen and ((min-width: 1280px) and (max-height: 720px)),
+       only screen and ((max-width: 1280px) and (min-height: 720px)) {
     body {
-        height: 100dvh;
-        width: 100dvw;
+        height: 100vh;
+        width: 100vw;
         flex-direction: row;
     }
 
@@ -485,14 +486,6 @@ canvas {
 
     #mobile-controls-left {
         gap: 200px;
-    }
-
-    #overlays {
-        margin: 0;
-        justify-content: center;
-        width: 100%;
-        height: auto;
-        aspect-ratio: 1280 / 720;
     }
 
     .overlay-screen {
@@ -656,6 +649,38 @@ canvas {
         margin: 6.7% 0 0 9.4%;
         width: 15.63%;
     }
+}
+
+@media only screen and (min-width: 1280px) and (max-height: 720px) {
+    #overlays {
+        margin: 0;
+        justify-content: center;
+        width: auto;
+        height: 100vh;
+        aspect-ratio: 1280 / 720;
+    }
+
+    canvas {
+        width: auto;
+        height: 100vh;
+        aspect-ratio: 1280 / 720;
+    }
+
+    button,
+    .binding,
+    .text-settings {
+        font-size: clamp(16px, calc(38 / 720 * 100vh), 38px);
+    }
+}
+
+@media only screen and (max-width: 1280px) and (min-height: 720px) {
+    #overlays {
+        margin: 0;
+        justify-content: center;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1280 / 720;
+    }
 
     canvas {
         width: 100%;
@@ -663,6 +688,38 @@ canvas {
         aspect-ratio: 1280 / 720;
     }
 }
+
+@media only screen and (max-height: 865px) {
+    h1 {
+        display: none;
+    }
+
+    body {
+        height: 100vh;
+        width: 100vw;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    #overlays {
+        margin: 0;
+    }
+
+    .overlay-screen {
+        margin: 0;
+    }
+}
+
+/* @media only screen and (max-height: 720px) {
+    #overlays {
+        height: 100vh;
+        width: calc((100vh / 56.25) * 100);
+    }
+
+    canvas {
+        height: 100vh;
+    }
+} */
 
 @media only screen and (max-width: 825px) {
     .keybindings-row {
@@ -774,34 +831,3 @@ canvas {
         font-size: 13px;
     }
 }
-
-@media only screen and (max-height: 865px) {
-    h1 {
-        display: none;
-    }
-
-    body {
-        height: 100dvh;
-        width: 100dvw;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    #overlays {
-        margin: 0;
-    }
-
-    .overlay-screen {
-        margin: 0;
-    }
-}
-
-/* @media only screen and (max-height: 720px) {
-    .overlay-screen {
-        height: 100vh;
-    }
-
-    canvas {
-        height: 100vh;
-    }
-} */
